tests/test_assets/semantic/invalid/casts/truncating_integer_types.cog
bad_truncations::(
    floating: f64,
    pointer: i32*
) -> void {
    truncate(f32, 1);
    truncate(u8, floating);
    truncate(u8, pointer);
    truncate(bool, 1);
}
