tests/test_assets/semantic/invalid/casts/truncating_integer_types.expected
semantic error at line 5: truncate target must be a concrete integer type
semantic error at line 6: truncate source must be an integer
semantic error at line 7: truncate source must be an integer
semantic error at line 8: truncate target must be a concrete integer type
4 semantic errors generated.
